--- a/style.css
+++ b/style.css
@@ -5,6 +5,57 @@ html {
   font-family: "Helvetica Neue", "Calibri", Arial, sans-serif;
   height: 100%;
 }
+
+.header-bar {
+  /* width: calc(1290px - 100px); */
+  width: 100%;
+  margin: 0 auto;
+  padding: 12px 12px 12px 120px;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+@media screen and (max-width: 500px) {
+  .branding img.mobile-logo {
+    display: inline-block;
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .branding img.mobile-logo {
+    display: none;
+  }
+}
+.container {
+  width: 70%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 32px;
+}
+.container header div,
+.container header p {
+  font-size: 1.2em;
+}
+.callout-text {
+  margin-top: 12px;
+  color: #659800;
+}
+
+.btn {
+  background-color: #031f73;
+  border: none;
+  color: #ffffff;
+  padding: 15px 32px;
+  text-align: center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  margin: 16px 0 !important;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 #app {
   background: #263238;
   display: flex;
@@ -74,6 +125,14 @@ html {
   display: flex;
   width: 100%;
   overflow: hidden;
+  background-image: url(preview_1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50%;
+}
+
+.error {
+  background-image: url(preview_2.png);
 }
 
 /* table style */
@@ -94,15 +153,16 @@ table {
   margin: 30px auto;
   text-align: left;
   width: 800px;
+  border: 1px solid #ddd;
 }
 
 th {
   background: url(https://jackrugile.com/images/misc/noise-diagonal.png),
-    linear-gradient(#777, #444);
-  border-left: 1px solid #555;
-  border-right: 1px solid #777;
-  border-top: 1px solid #555;
-  border-bottom: 1px solid #333;
+    linear-gradient(#9acf2f, #507701);
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   box-shadow: inset 0 1px 0 #999;
   color: #fff;
   font-weight: bold;
